fixing image spacing

--- a/docs/playtext_copy-web-resources/css/play.css
+++ b/docs/playtext_copy-web-resources/css/play.css
@@ -64,14 +64,11 @@ section.play {
 section.image {
   width: 70%;
   max-width: 750px;
-  display: flex;
-  min-width: 350px;
   margin: 5% auto 5% auto;
 }
 img {
-  width: 80%;
+  width: 100%;
   display: block;
-  margin: 0% auto 0% auto;
 }
 h1.act {
   text-align: center;
@@ -141,9 +138,12 @@ span.character_beforespeech {
 
 @media screen and (max-width: 700px) {
   html {
-    font-size: 12px;
+    font-size: 0.9em;
     width:100%;
     min-width: 50px;
   }
+  section.dramatis {
+    width: 90%;
+    padding: 0.5em;
+  }
 }
-
